--- a/templates/search/word.html
+++ b/templates/search/word.html
@@ -1,4 +1,4 @@
-{% extends 'index.html' %}
+{% extends 'search/index.html' %}
 {% load static %}
 
 {% block title %}{{ results.word | title }} | Definition of {{ results.word | title }} by Ging Dictionary{% endblock %}
