--- a/templates/search/index.html
+++ b/templates/search/index.html
@@ -1,8 +1,7 @@
-{% load static %}
-
 <!DOCTYPE html>
 <html lang="en"> 
 	<head>
+		{% load static %}
 		<title>{% block title %}Dictionary{% endblock %}</title>
 		
 		<meta charset="utf-8">
@@ -26,9 +25,14 @@
 					   <img src="{% static 'assets/images/booklogo.png' %}" alt="Logo" width="100px" />
 					</a>
 			   	</h1>
-			   	<div>
-					<button type="button" class="login">Login</button>
-				</div>
+				<div class="right">
+                    {% if request.user.is_authenticated %}
+                        <span>{{request.user.first_name}} {{request.user.last_name}}</span>
+                        <a href="{% url 'users:logout' %}" class="login"> Logout </a>
+                    {% else %}
+                        <a href="{% url 'users:login' %}" class="login"> Login </a>
+                    {% endif %}
+                <div>
 			</header>   
 			<section class="spotlight">
 				<section class="wrapper">
